--- a/World_Bank_Global_Education_Analysis_EDA.ipynb
+++ b/World_Bank_Global_Education_Analysis_EDA.ipynb
@@ -59,7 +59,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "The World Bank EdStats all indicator query hold over 4000 internationaly comperable indicators that discribe education excess procession complication, litracy, teachers, population, and expenditure. The indicator cover the education cycle from pre-primary to vocational and tertiary eduaction and hold learning outcome data from international and regional learning assignments (e.g PISA, TIMSS, PIRLS) equity data from household survey , and projection/attainment data. Explore any analyze the data to identify variation of indicators across the globe, which countries are more alike and different. Feel free to add more expensive analysis and details."
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -77,7 +77,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "**Github link :-**   https://github.com/Asifbbl/World-Bank-Global-Education-Analysis-EDA/blob/main/World_Bank_Global_Education_Analysis_EDA.ipynb"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "M8Vqi-pPk-HR"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
         },
         "outputId": "ce4d4236-73f1-4f5c-dd7f-1dba5d446d48"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "lE62G6MCgR88"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
         },
         "outputId": "1bac8452-62c5-4342-9054-a1080f6d094a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,7 +637,7 @@
         "id": "uGshsAUHh2xf",
         "outputId": "aeb50707-b16a-4473-fae7-e0ea44ec7964"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +827,7 @@
         "id": "VztsL67GiAYW",
         "outputId": "8adba7db-1f33-47dc-9958-5611c39411e0"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1137,7 +1137,7 @@
         "id": "jW2meZzdiO8z",
         "outputId": "7cebb93d-0e2c-403f-cf3b-54503df60d31"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1496,7 +1496,7 @@
         "id": "hF49T_s8iV2X",
         "outputId": "27c60911-10d7-426d-8b49-29127132f08b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1700,7 +1700,7 @@
         },
         "outputId": "dca0ab4c-b554-4748-bb1a-560668699ef0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1747,7 +1747,7 @@
         },
         "outputId": "e5c88222-a95c-422c-90c0-12303e5d8b72"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1797,7 +1797,7 @@
         "id": "zJHZlji-lytv",
         "outputId": "066bb655-0ef9-45d3-a8aa-411abc590f5e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1831,7 +1831,7 @@
         "id": "UUZXSTOsmPcT",
         "outputId": "93e56c38-01e2-4102-9b20-3409a43c65ec"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1930,7 +1930,7 @@
         "id": "nmKCSLJHmmHi",
         "outputId": "8b4e8520-0091-48d3-f3c6-a1ae285d6d42"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1991,7 +1991,7 @@
         "id": "-3uZSOf5nXzQ",
         "outputId": "20621297-1e8d-4e25-d2ba-daf42e2d5d2e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2034,7 +2034,7 @@
         },
         "outputId": "d9a9883f-90d6-4ee5-d359-7a2a43b472e7"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2060,7 +2060,7 @@
         "id": "w5Mx1xGFqV-i",
         "outputId": "b4d4a09c-a5af-4a74-833d-242345a04d18"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2086,7 +2086,7 @@
         "id": "hD-fr3QXqgNF",
         "outputId": "5a94b9ed-ff0a-4c32-c482-d703e65740fb"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2112,7 +2112,7 @@
         "id": "ws3-4LVnqoEt",
         "outputId": "b75f141c-7efc-4104-f79a-461672e693e7"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2138,7 +2138,7 @@
         "id": "EmJP5Nhjqxv2",
         "outputId": "fec7f9bf-4a46-43e1-bb7b-267dd634ea99"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2174,7 +2174,7 @@
         },
         "outputId": "9a6d3d82-fe30-4ce8-dbcb-622cd37e2824"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2269,7 +2269,7 @@
         },
         "outputId": "1dd00396-91ce-4439-aff9-0d0edcd4562c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2303,7 +2303,7 @@
         },
         "outputId": "836d4f3a-6740-42d2-e7fe-94821c4e3b64"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2807,7 +2807,7 @@
         "id": "1zdoL0Joo5KQ",
         "outputId": "9ca5ef89-0d6e-43b7-adc0-d92922b964b6"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
